<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/introduce_el_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSelect" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.171" app:layout_constraintVertical_bias="0.311"
            android:textSize="18sp" android:textColor="@android:color/black" android:textStyle="bold"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/destinatario" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.219"
            android:layout_marginTop="256dp"
            app:layout_constraintTop_toTopOf="parent" android:autofillHints=""/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:text="@string/hola"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.175"
            android:id="@+id/txtHola" android:textSize="30sp" android:textColor="@color/colorAccent"
            android:textStyle="bold" android:textAlignment="center" app:layout_constraintHorizontal_bias="0.468"/>
    <TextView
            android:text="@string/mensaje"
            android:layout_width="260dp"
            android:layout_height="29dp"
            android:id="@+id/txtMensaje"
            android:layout_marginTop="220dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="96dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.851"
            android:textSize="18sp" android:textColor="@android:color/black" android:textStyle="bold"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/txtArea_Msg"
            app:layout_constraintVertical_bias="0.903"/>
    <MultiAutoCompleteTextView
            android:layout_width="337dp"
            android:layout_height="65dp"
            android:id="@+id/txtArea_Msg"
            android:labelFor="@+id/txtMensaje"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:textAlignment="textStart"
            android:layout_marginBottom="264dp" app:layout_constraintHorizontal_bias="0.689"/>
    <Button
            android:text="@string/enviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnEnviar" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.953"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.84" style="@style/Widget.AppCompat.Button.Colored"/>


</android.support.constraint.ConstraintLayout>